# lore

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  PLAN.md  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
eval/: metrics.py  queries.jsonl  results.md  run_eval.py
eval/corpus/: bm25.md  chunking.md  fusion.md  mcp.md  qdrant.md  rerank.md  vectors.md  watcher.md
eval/token_bench/: README.md  results.md  run_bench.py  tasks.jsonl
examples/: claude_desktop_config.json  curl.sh
packaging/homebrew/: README.md  lore.rb
src/hybrid_search/: __init__.py  __main__.py  api.py  chunking.py  cli.py  config.py  embeddings.py  fusion.py  indexer.py  lexical.py  lifecycle.py  logging_setup.py  mcp_server.py  projects.py  rerank.py  search.py  vector.py  watcher.py
src/hybrid_search/integrations/: __init__.py  langchain.py
tests/: conftest.py  test_api.py  test_chunking.py  test_cli_add_all.py  test_config.py  test_embeddings.py  test_eval.py  test_fusion.py  test_imports.py  test_indexer.py  test_langchain.py  test_lexical.py  test_mcp_server.py  test_projects.py  test_rerank.py  test_search.py  test_token_bench.py  test_vector.py  test_watcher.py
