[project]
name = "hybrid-search"
version = "0.1.0"
description = "Local hybrid search (BM25 + vector) with MCP and HTTP interfaces"
requires-python = ">=3.11,<3.13"
readme = "README.md"
dependencies = [
    "qdrant-client>=1.12",
    "fastembed>=0.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "fastmcp>=0.2",
    "watchdog>=5.0",
    "pyyaml>=6.0",
    "tiktoken>=0.8",
    "pathspec>=0.12",
    "rich>=13.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "claude-agent-sdk>=0.1",
]
parsers = [
    "pypdf>=5.1",
    "python-docx>=1.1",
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=1.6",
]

[project.scripts]
lore = "hybrid_search.cli:main"
hybrid-search = "hybrid_search.cli:main"
hybrid-index = "hybrid_search.cli:index_cmd"
hybrid-query = "hybrid_search.cli:query_cmd"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hybrid_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "integration: exercises real models or services (set HYBRID_RUN_INTEGRATION=1)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
